[package]
name = "draft_kv"
version = "0.1.0"
authors = ["AmbitionXiang <Xiang.Leee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
itertools = "0.10.1"
serde = { version = "1.0.125", features = ["rc"] }
serde_derive = "1.0.125"
skiplist = "0.3.0"
